feat: 完成common模块基础功能开发